**🌟 Aggiunta front-end e catalogo dinamico per e-Commerce**
- **Aggiunte principali:**
  - Creazione di pagine front-end dinamiche:
    - **Homepage** con sezioni "hero" e "highlights" dei prodotti in evidenza.
    - **Catalogo prodotti** con supporto a filtri (categoria, ricerca testuale) e ordinamento (categoria, titolo, quantità, prezzo).
    - **Navbar e footer** condivisi per migliorare l'esperienza utente.
  - **Funzionalità di filtro categorie**: Integrato filtro laterale con conteggio prodotti per categoria.
  - **Paginazione dinamica** estesa alle pagine pubbliche:
    - Utilizzo della funzione `paginationRender` con personalizzazione basata su GET parameters (`pageName`, allineamento).
  - **Stili aggiuntivi**:
    - Classi per gestione ellissi di testo a due e tre righe.
    - Ottimizzazioni di visualizzazione per sezioni adaptive tramite Bootstrap.

- **Modifiche:**
  - Rifattorizzazione della logica di backend per separazione delle responsabilità e migliore riusabilità del codice (`bootstrap.inc.php`, `categories.inc.php`).
  - Utilizzo di query parametrizzate per ridurre potenziali rischi di SQL injection.
  - Aggiornato `composer.json` con estensioni PHP necessarie (`ext-pdo`, `ext-intl`).

- **Impatto:**
  - Introduzione di un moderno catalogo front-end con migliori capacità di navigazione e ricerca.
  - Miglioramento UX per utenti finali con elementi responsive e intuitivi.

- **Note tecniche:**
  - Aggiunto Bootstrap 5.3 e Bootstrap Icons via CDN.
  - Tutti i link dinamici correlati passano ora attraverso GET parametrizzabili, migliorando flessibilità e estensibilità.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "require": {
         "fakerphp/faker": "^1.24",
-        "snlbaral/faker-ecommerce": "^2.0"
+        "snlbaral/faker-ecommerce": "^2.0",
+        "ext-pdo": "*",
+        "ext-intl": "*"
     }
 }
